<resources>
    <string name="app_name">hospital_list</string>
    <string name="equipment">Equipment:</string>
    <string name="brand_manufacturer">Brand/Manufacturer:</string>
    <string name="quantity">Quantity:</string>
    <string name="submit">Submit</string>
    <string name="request_now">Request Now</string>
    <string name="equipment_type">Equipment Type</string>
    <string name="equipment">Equipment:</string>
    <string name="brand_manufacturer">Brand/Manufacturer:</string>
    <string name="quantity">Quantity:</string>
    <string name="equipment_request">Equipment Request</string>
</resources>